cmake_minimum_required(VERSION 2.8)
project( glog )
message (STATUS "CMAKE ${PROJECT_NAME} " )

set(TARGET libglog )
set(MAJOR 0)
set(MINOR 0.0)
set(SUFFIX .so)

set(PROJECT_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
set(PROJECT_LIB_DIR "${PROJECT_SOURCE_DIR}/build")
set(PROJECT_LIB_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/src/windows/glog")

add_custom_target(${PROJECT_NAME} ALL DEPENDS ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}/lib/${TARGET}${SUFFIX} )

ADD_CUSTOM_COMMAND(
	OUTPUT ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}/lib/${TARGET}${SUFFIX}
	COMMAND mkdir -p build 
	COMMAND cd ./build && export CXXFLAGS="-fPIC" && cmake -DCMAKE_INSTALL_PREFIX=${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME} -DBUILD_SHARED_LIBS=ON .. && make -j4 && make install
	WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
)

ADD_CUSTOM_COMMAND(
	  TARGET ${PROJECT_NAME}
	  POST_BUILD
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LICENSE_OUTPUT_PATH}/${PROJECT_NAME}
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME} 
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}/bin 
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}/lib 
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}/include 
          COMMENT "POST BUILD"
)


file(GLOB HEADERS "${PROJECT_LIB_INCLUDE_DIR}/*.h" )


set(LIBS 
	${PROJECT_LIB_DIR}/${TARGET}${SUFFIX}
	${PROJECT_LIB_DIR}/${TARGET}${SUFFIX}.${MAJOR}
	${PROJECT_LIB_DIR}/${TARGET}${SUFFIX}.${MAJOR}.${MINOR}
)

set(LICENSES
	${PROJECT_SOURCE_DIR}/COPYING
)
 
#INSTALL(
#        CODE
#        "EXECUTE_PROCESS (
#        COMMAND make install
#        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
#        )
#        "
#)

