cmake_minimum_required(VERSION 2.8)
project( libass )
message (STATUS "CMAKE ${PROJECT_NAME} " )

set(TARGET libass )
set(MAJOR 1)
set(MINOR 0)
set(SUFFIX .a)

set(FFMPEG ffmpeg)

set(PROJECT_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
set(PROJECT_LIB_DIR "${PROJECT_SOURCE_DIR}/libass/.libs")
set(PROJECT_LIB_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/")

SET(ENV{PATH} "${LIBRARY_OUTPUT_PATH}/${FFMPEG}/bin:$ENV{PATH}")
SET(ENV{LD_LIBRARY_PATH} "${LIBRARY_OUTPUT_PATH}/freetype/lib:${LIBRARY_OUTPUT_PATH}/${FFMPEG}/lib:$ENV{LD_LIBRARY_PATH}")
SET(ENV{PKG_CONFIG_PATH} "${LIBRARY_OUTPUT_PATH}/freetype/lib/pkgconfig:${LIBRARY_OUTPUT_PATH}/${FFMPEG}/lib/pkgconfig:$ENV{PKG_CONFIG_PATH}")

add_custom_target(${PROJECT_NAME} ALL DEPENDS ${LIBRARY_OUTPUT_PATH}/${FFMPEG}/lib/${TARGET}${SUFFIX} )


ADD_CUSTOM_COMMAND(
	OUTPUT ${LIBRARY_OUTPUT_PATH}/${FFMPEG}/lib/${TARGET}${SUFFIX}
	COMMAND cd .. && ./build.sh
	DEPENDS freetype
	WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
)

ADD_CUSTOM_COMMAND(
	  TARGET ${PROJECT_NAME}
	  POST_BUILD
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LICENSE_OUTPUT_PATH}/${PROJECT_NAME}
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBRARY_OUTPUT_PATH}/${FFMPEG} 
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBRARY_OUTPUT_PATH}/${FFMPEG}/bin 
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBRARY_OUTPUT_PATH}/${FFMPEG}/lib 
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBRARY_OUTPUT_PATH}/${FFMPEG}/include 
          COMMENT "POST BUILD"
)


set(
	LICENSE ${PROJECT_SOURCE_DIR}/COPYING 
)
 

INSTALL (
	FILES ${LICENSE} DESTINATION ${LICENSE_OUTPUT_PATH}/${PROJECT_NAME}
)


