cmake_minimum_required(VERSION 2.8)
project( ogre )
message (STATUS "CMAKE ${PROJECT_NAME} " )

set(TARGET libOgreMain )
set(MAJOR 2)
set(MINOR 1)
set(SUFFIX .so)

set(PROJECT_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
set(PROJECT_LIB_DIR "${PROJECT_SOURCE_DIR}/")
set(PROJECT_LIB_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/")


add_custom_target(${PROJECT_NAME} ALL DEPENDS ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}/lib/${TARGET}${SUFFIX} )


ADD_CUSTOM_COMMAND(
	OUTPUT ${PROJECT_LIB_DIR}/Dependencies/lib/libOIS.so ${PROJECT_LIB_DIR}/Dependencies/lib/libFreeImage.a
	COMMAND mkdir -p ./build
	COMMAND cd ./build && cmake -DCMAKE_INSTALL_PREFIX=${PROJECT_SOURCE_DIR}/Dependencies .. && make -j4 && make install
	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/deps
	COMMENT "DEPS"
)

ADD_CUSTOM_COMMAND(
	OUTPUT ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}/lib/${TARGET}${SUFFIX}
	COMMAND mkdir -p ./build
	COMMAND cd ./build && cmake -DCMAKE_INSTALL_PREFIX=${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME} .. && make -j4 && make install
	DEPENDS ${PROJECT_LIB_DIR}/Dependencies/lib/libOIS.so ${PROJECT_LIB_DIR}/Dependencies/lib/libFreeImage.a
	WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
	COMMENT "OGRE"
)

ADD_CUSTOM_COMMAND(
	  TARGET ${PROJECT_NAME}
	  POST_BUILD
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LICENSE_OUTPUT_PATH}/${PROJECT_NAME}
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME} 
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}/bin 
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}/lib 
          COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}/include 
          COMMENT "POST BUILD"
)


set(
	LICENSE ${PROJECT_SOURCE_DIR}/COPYING 
)

#INSTALL(
#        CODE
#        "EXECUTE_PROCESS (
#        COMMAND make install
#        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/build
#        )
#        "
#)


INSTALL (
	FILES ${LICENSE} DESTINATION ${LICENSE_OUTPUT_PATH}/${PROJECT_NAME}
)


